--- a/workshops/June-2024-SpaDES-workshop.qmd
+++ b/workshops/June-2024-SpaDES-workshop.qmd
@@ -11,14 +11,15 @@ categories:
   - SpaDES Workshops
   - Training
 comments: false
+editor:
+  markdown:
+    wrap: 150
 ---
 
 *Registration for this workshop is now closed*.
 
-If you missed it, but would like to attend a future workshop, please
-reach out to [Eliot](../bios/community/aaaeliot.qmd) or
-[Ceres](../bios/community/aaaeliot.qmd) so that we can add you to the
-wait list.
+If you missed it, but would like to attend a future workshop, please reach out to [Eliot](../bios/community/aaaeliot.qmd) or
+[Ceres](../bios/community/aaaeliot.qmd) so that we can add you to the wait list.
 
 ## Date: June 11 - 13, 2024
 
@@ -30,103 +31,95 @@ Meeting link will be e-mailed to all workshop participants.
 
 "WOYO", Work On Your Own + health breaks
 
-In each session you will have time to work through the examples and take
-breaks. We will be monitoring the chat the entire WOYO period,
-responding to questions. Plus, the last 15min of each WOYO will be with
-"open video and chat" to ask questions and discuss as a group. Where
-appropriate, we can jump into video earlier for discussion.
+In each session you will have time to work through the examples and take breaks. We will be monitoring the chat the entire WOYO period, responding to
+questions. Plus, the last 15min of each WOYO will be with "open video and chat" to ask questions and discuss as a group. Where appropriate, we can
+jump into video earlier for discussion.
 
 All times in Pacific Daylight Time (GMT-7)
 
-+-------------------------------+-------------------------------+
-| **DAY 1**                     | **SpaDES foundations**        |
-+-------------------------------+-------------------------------+
-| 8:30 - 9:20                   | Introduction                  |
-+-------------------------------+-------------------------------+
-|                               | Workshop logistics            |
-+-------------------------------+-------------------------------+
-|                               | What is SpaDES and why use    |
-|                               | it?                           |
-+-------------------------------+-------------------------------+
-| 9:30 - 10:00                  | [Introduction to SpaDES modules](https://predictiveecology.org/training/_book/NewModuleIntro.html) |
-+-------------------------------+-------------------------------+
-| 10:00 - 11:00                 | WOYO                          |
-+-------------------------------+-------------------------------+
-| 11:00 - 11:30                 | [Module files and metadata](https://predictiveecology.org/training/_book/MetaDataAndModuleFiles.html)  
-|                               |                               |
-|                               | [Module inputs](https://predictiveecology.org/training/_book/ModuleInputs.html) |
-+-------------------------------+-------------------------------+
-| 11:30 - 12:30                 | WOYO                          |
-+-------------------------------+-------------------------------+
-| 12:30 - 1:30                  | LUNCH BREAK                   |
-+-------------------------------+-------------------------------+
-| 1:30 - 2:00                   | [The `simList`](https://predictiveecology.org/training/_book/simList.html) |
-+-------------------------------+-------------------------------+
-| 2:00 - 3:00                   | WOYO                          |
-+-------------------------------+-------------------------------+
-| 3:00 - 3:30                   | [Modules & events](https://predictiveecology.org/training/_book/ModulesAndEvents.html) 
-|                               |                               |
-|                               | [Event scheduling](https://predictiveecology.org/training/_book/Scheduling.html) |
-+-------------------------------+-------------------------------+
-| 3:30 - free ending\           | WOYO                          |
-| or\                           |                               |
-| next morning for earlier time |                               |
-| zones                         |                               |
-+-------------------------------+-------------------------------+
-| **DAY 2**                     | **Continuous workflows with   |
-|                               | simple examples**             |
-+-------------------------------+-------------------------------+
-| 8:30 - 9:00                   | Revisit previous WOYO and Day |
-|                               | 1                             |
-+-------------------------------+-------------------------------+
-| 9:00 - 9:30                   | [Continuous                   |
-|                               | workflows](https://predictiveecology.org/training/_book/ContinuousWorkflows.html) |
-|                               |                               |
-|                               | [Caching](https://predictiveecology.org/training/_book/Caching.html) |
-+-------------------------------+-------------------------------+
-| 9:30 - 10:30                  | WOYO                          |
-+-------------------------------+-------------------------------+
-| 10:30 - 11:00                 | [`prepInputs()`](https://predictiveecology.org/training/_book/prepInputs.html) |
-+-------------------------------+-------------------------------+
-| 11:00 - 12:00                 | WOYO                          |
-+-------------------------------+-------------------------------+
-| 12:00 - 1:00                  | LUNCH BREAK                   |
-+-------------------------------+-------------------------------+
-| 1:00 - 1:30                   | [SpaDES workflows and projects with `setupProject`](https://predictiveecology.org/training/_book/setupProject.html) |
-|                               |                               |
-|                               | [A simple workflow for an ecological example](https://predictiveecology.org/training/_book/workflowSimple2.html) |
-+-------------------------------+-------------------------------+
-| 1:30 - 2:30                   | WOYO                          |
-+-------------------------------+-------------------------------+
-| 2:30 - 3:00                   | [Debugging](https://predictiveecology.org/training/_book/debugging.html) |
-|                               |                               |
-|                               | [Best Practices](https://predictiveecology.org/training/_book/bestPractices.html) |
-+-------------------------------+-------------------------------+
-| 3:00 - free ending\           | WOYO                          |
-| or\                           |                               |
-| next morning for earlier time |                               |
-| zones                         |                               |
-+-------------------------------+-------------------------------+
-| **DAY 3**                     | **Using continuous workflows  |
-|                               | with real challenges**        |
-+-------------------------------+-------------------------------+
-| 8:30 - 9:00                   | Revisit previous WOYO and Day |
-|                               | 2                             |
-+-------------------------------+-------------------------------+
-| 9:00 - 9:30                   | Flexibility comes at a cost,  |
-|                               | but it's worth it!            |
-+-------------------------------+-------------------------------+
-| 9:30 - 10:00                  | [Forest landscape modelling - parameterisation, simulation/prediction](https://predictiveecology.org/training/_book/LandRDemo_coreVeg.html) |
-+-------------------------------+-------------------------------+
-| 10:00 - 11:00                 | WOYO                          |
-+-------------------------------+-------------------------------+
-| 11:00 - 11:30                 | [Forest landscape modelling - turn plotting on, extend the simulation, scenarios](https://predictiveecology.org/training/_book/LandRDemo_coreVeg.html#turn-plotting-on-after-setting-up-the-workflow) |
-+-------------------------------+-------------------------------+
-| 11:30 - 12:30                 | WOYO                          |
-+-------------------------------+-------------------------------+
-| 12:30 - 1:30                  | LUNCH BREAK                   |
-+-------------------------------+-------------------------------+
-| 1:30 - 2:00                   | [Forests and wildfire](https://predictiveecology.org/training/_book/ForestsAndFire.html) |
-+-------------------------------+-------------------------------+
-| 2:00 - 3:00                   | WOYO                          |
-+-------------------------------+-------------------------------+
+Presentation slides will be added at the end of each day.
+
++-------------------------+--------------------------------------------------------------------------------------------------------------------------+
+| **DAY 1**               | **SpaDES foundations**                                                                                                   |
++-------------------------+--------------------------------------------------------------------------------------------------------------------------+
+| 8:30 - 9:20             | Introduction                                                                                                             |
++-------------------------+--------------------------------------------------------------------------------------------------------------------------+
+|                         | Workshop logistics                                                                                                       |
++-------------------------+--------------------------------------------------------------------------------------------------------------------------+
+|                         | What is SpaDES and why use it?                                                                                           |
++-------------------------+--------------------------------------------------------------------------------------------------------------------------+
+| 9:30 - 10:00            | [Introduction to SpaDES modules](https://predictiveecology.org/training/_book/NewModuleIntro.html)                       |
++-------------------------+--------------------------------------------------------------------------------------------------------------------------+
+| 10:00 - 11:00           | WOYO                                                                                                                     |
++-------------------------+--------------------------------------------------------------------------------------------------------------------------+
+| 11:00 - 11:30           | [Module files and metadata](https://predictiveecology.org/training/_book/MetaDataAndModuleFiles.html)                    |
++-------------------------+--------------------------------------------------------------------------------------------------------------------------+
+| 11:30 - 12:30           | WOYO                                                                                                                     |
++-------------------------+--------------------------------------------------------------------------------------------------------------------------+
+| 12:30 - 1:30            | LUNCH BREAK                                                                                                              |
++-------------------------+--------------------------------------------------------------------------------------------------------------------------+
+| 1:30 - 2:00             | [Module inputs](https://predictiveecology.org/training/_book/ModuleInputs.html)                                          |
++-------------------------+--------------------------------------------------------------------------------------------------------------------------+
+| 2:00 - 3:00             | WOYO                                                                                                                     |
++-------------------------+--------------------------------------------------------------------------------------------------------------------------+
+| 3:00 - 3:30             | [The `simList`](https://predictiveecology.org/training/_book/simList.html)                                               |
++-------------------------+--------------------------------------------------------------------------------------------------------------------------+
+| 3:30 - free ending\     | WOYO                                                                                                                     |
+| or\                     |                                                                                                                          |
+| next morning for        |                                                                                                                          |
+| earlier time zones      |                                                                                                                          |
++-------------------------+--------------------------------------------------------------------------------------------------------------------------+
+| **DAY 2**               | **Continuous workflows with simple examples**                                                                            |
++-------------------------+--------------------------------------------------------------------------------------------------------------------------+
+| 8:30 - 9:00             | Revisit previous WOYO and Day 1                                                                                          |
++-------------------------+--------------------------------------------------------------------------------------------------------------------------+
+| 9:00 - 9:30             | [Modules & events](https://predictiveecology.org/training/_book/ModulesAndEvents.html)                                   |
++-------------------------+--------------------------------------------------------------------------------------------------------------------------+
+|                         | [Event scheduling](https://predictiveecology.org/training/_book/Scheduling.html)                                         |
++-------------------------+--------------------------------------------------------------------------------------------------------------------------+
+| 9:30 - 10:30            | WOYO                                                                                                                     |
++-------------------------+--------------------------------------------------------------------------------------------------------------------------+
+| 10:30 - 11:00           | [Continuous workflows](https://predictiveecology.org/training/_book/ContinuousWorkflows.html)                            |
++-------------------------+--------------------------------------------------------------------------------------------------------------------------+
+|                         | [Caching](https://predictiveecology.org/training/_book/Caching.html)                                                     |
++-------------------------+--------------------------------------------------------------------------------------------------------------------------+
+| 11:00 - 12:00           | WOYO                                                                                                                     |
++-------------------------+--------------------------------------------------------------------------------------------------------------------------+
+| 12:00 - 1:00            | LUNCH BREAK                                                                                                              |
++-------------------------+--------------------------------------------------------------------------------------------------------------------------+
+| 1:00 - 1:30             | [`prepInputs()`](https://predictiveecology.org/training/_book/prepInputs.html)                                           |
++-------------------------+--------------------------------------------------------------------------------------------------------------------------+
+| 1:30 - 2:30             | WOYO                                                                                                                     |
++-------------------------+--------------------------------------------------------------------------------------------------------------------------+
+| 2:30 - 3:00             | [SpaDES workflows and projects with `setupProject`](https://predictiveecology.org/training/_book/setupProject.html)      |
++-------------------------+--------------------------------------------------------------------------------------------------------------------------+
+|                         | [A simple workflow for an ecological example](https://predictiveecology.org/training/_book/workflowSimple2.html)         |
++-------------------------+--------------------------------------------------------------------------------------------------------------------------+
+| 3:00 - free \| WOYO     |                                                                                                                          |
+| ending  \| or\          |                                                                                                                          |
+| next morning \| for     |                                                                                                                          |
+| earlier \| time zones   |                                                                                                                          |
+| \|                      |                                                                                                                          |
++-------------------------+--------------------------------------------------------------------------------------------------------------------------+
+| **DAY 3**               | **Using continuous workflows with real challenges**                                                                      |
++-------------------------+--------------------------------------------------------------------------------------------------------------------------+
+| 8:30 - 9:00             | Revisit previous WOYO and Day 2                                                                                          |
++-------------------------+--------------------------------------------------------------------------------------------------------------------------+
+| 9:00 - 9:30             | Flexibility comes at a cost, but it's worth it!                                                                          |
++-------------------------+--------------------------------------------------------------------------------------------------------------------------+
+| 9:30 - 10:00            | [Forest landscape modelling - parameterisation,                                                                          |
+|                         | simulation/prediction](https://predictiveecology.org/training/_book/LandRDemo_coreVeg.html)                              |
++-------------------------+--------------------------------------------------------------------------------------------------------------------------+
+| 10:00 - 11:00           | WOYO                                                                                                                     |
++-------------------------+--------------------------------------------------------------------------------------------------------------------------+
+| 11:00 - 11:30           | [Forest landscape modelling - turn plotting on, extend the simulation,                                                   |
+|                         | scenarios](https://predictiveecology.org/training/_book/LandRDemo_coreVeg#turn-plotting-on-after-setting-up-the-workflow)|
++-------------------------+--------------------------------------------------------------------------------------------------------------------------+
+| 11:30 - 12:30           | WOYO                                                                                                                     |
++-------------------------+--------------------------------------------------------------------------------------------------------------------------+
+| 12:30 - 1:30            | LUNCH BREAK                                                                                                              |
++-------------------------+--------------------------------------------------------------------------------------------------------------------------+
+| 1:30 - 2:00             | [Forests and wildfire](https://predictiveecology.org/training/_book/ForestsAndFire.html)                                 |
++-------------------------+--------------------------------------------------------------------------------------------------------------------------+
+| 2:00 - 3:00             | WOYO                                                                                                                     |
++-------------------------+--------------------------------------------------------------------------------------------------------------------------+
